--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,23 +1,108 @@
-<!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP1</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
-    </head>
-    <body>        
-        <h1>TP1</h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+<head>
+	<meta charset="utf8" />
+	<title>cv - Long</title>
+	<link href="index.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+	<table style="width:100%" border="1">
+		<tr>
+			<td>NGO Hai Long</td>
+			<td>Celibataire</td>
+		</tr>
+		<tr>
+			<td>41 rue Guynemer</td>
+			<td>Residence Guynemer</td>
+		</tr>
+		<tr>
+			<td>07 69 45 80 64</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><a href="https://www.google.com/gmail/about/">41201957@hcmut.edu.vn</a></td>
+			<td></td>
+		</tr>
+	</table>
+
+	<table style="width:100%" border="1">
+		<h1>Education</h1>
+		<tr>
+			<td>2016</td>
+			<td>Master 3IR at <a href="https://www.univ-paris13.fr/">Paris 13 University</a>, expected graduation in September, 2017
+				<img src="up13.png" alt="UP13" style="width:80px;height:80px;">
+			</td>
+		</tr>
+		<tr>
+			<td>2012</td>
+			<td>Studied Telecomunications at <a href="http://www.hcmut.edu.vn/en">Ho Chi Minh University of Technology</a>, expected graduation
+				in January, 2017
+				<img src="hcmut.png" alt="HCMUT" style="width:60px;height:60px;">
+				</td>
+		</tr>
+		<tr>
+			<td>2009</td>
+			<td>Studied Physics at <a href="http://ptnk.edu.vn/#">Highschool for the Gifted-VNU</a>, graduated in May, 2012
+			<img src="PTNK.jpg" alt="PTNK" style="width:60px;height:60px;">
+			</td>
+		</tr>
+	</table>
+
+	<table style="width:100%" border="1">
+		<h1>Related Experience</h1>
+		<tr>
+			<td>Jan.2016-May.2016</td>
+			<td>Teacher Assistant in DSP Lab: assisted students with assignments, lab projects and gave feedbacks</td>
+		</tr>
+	</table>
+
+	<table style="width:100%" border="1">
+		<h1>Relevant Courses</h1>
+		<tr>
+			<td>Telecommunications</td>
+			<td>Data Communicaitons and Networking, Computer Networking,Digital Communications, Digital Signal Processing, Digital Image
+				Processing
+			</td>
+		</tr>
+		<tr>
+			<td>Language</td>
+			<td>English: intermediate</td>
+		</tr>
+	</table>
+
+	<table style="width:100%" border="1">
+		<h1>Qualification and Skills</h1>
+		<tr>
+			<td>Technical Applicaions</td>
+			<td>Matlab, PSpice</td>
+		</tr>
+		<tr>
+			<td>Programming Language</td>
+			<td>C-Programming</td>
+		</tr>
+		<tr>
+			<td>Hardware Design</td>
+			<td>Orcad 9.2</td>
+			<tr/>
+	</table>
+
+	<table style="width:100%" border="1">
+		<h1>Prize and Scholarship</h1>
+		<tr>
+			<td>2016</td>
+			<td>Erasmus Scholarship for Master 3IT at UP13</td>
+		</tr>
+		<tr>
+			<td>2011</td>
+			<td>Honorable Mention Award in Physics, Vietnam National Contest for Gifted Student</td>
+		</tr>
+		<tr>
+			<td>2011</td>
+			<td>Odon Vallet Scholarship for Academic ecellent, Recontres du Vietnam</td>
+			<tr/>
+	</table>
+
+</body>
+
 </html>
