--- a/tp4/index.html
+++ b/tp4/index.html
@@ -1,23 +1,118 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP4</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lqng="en">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
-    </head>
-    <body>        
-        <h1>TP4</h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
-    </body>
+<head>
+	<title> tp4 </title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="index.js"></script>
+	<script>
+		$( function() {
+		$( "#datepicker" ).datepicker();
+		} );
+	</script>
+</head>
+
+<body>
+	<div class="container-fluid">
+		<h1>TP4 AW - Formulaire</h1>
+		<p> HTML5: GPS, Local Storage</p>
+		<form class="form-horizontal">
+			<div class="form-group">
+				<label for="nom" class="col-sm-2 control-label">Nom</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="nom" placeholder="">
+				</div>
+				<div class="col-sm-2">
+					<div id="carNom"></div>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label for="prenom" class="col-sm-2 control-label">Prenom</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="prenom" placeholder="">
+				</div>
+				<div class="col-sm-2">
+					<div id="carPrenom"></div>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label for="date" class="col-sm-2 control-label">Date de naissance</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="datepicker" placeholder="JJ/MM/AAAA">
+				</div>
+				<div class="col-sm-2">
+					<div id="carDate"></div>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label for="addr" class="col-sm-2 control-label">Address</label>
+				<div class="col-sm-7">
+					<input type="text" class="form-control" id="addr" placeholder="">
+				</div>
+				<div class="col-sm-1">
+					<button type="button" class="btn btn-warning" id="GPS">GPS</button>
+				</div>
+				<div class="col-sm-2">
+					<div id="carAddr"></div>
+				</div>
+
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-8">
+					<div id="mapholder"></div>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="mail" class="col-sm-2 control-label">Mail</label>
+				<div class="col-sm-8">
+					<input type="email" class="form-control" id="mail" placeholder="">
+				</div>
+				<div class="col-sm-2">
+					<div id="carEmail"></div>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-1">
+					<button type="button" class="btn btn-primary" data-toggle="" data-target="" data-whatever="" id="valid">Valider</button>
+				</div>
+				<div class="col-sm-5">
+					<div id="result" style="color:blue;background-color:powderblue;font-size:120%;"></div>
+				</div>
+			</div>
+
+		</form>
+	</div>
+	<!-- Modal -->
+	<div class="modal fade" id="l-Modal" tabindex="-1" role="dialog" aria-labelledby="l-ModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="l-ModalLabel"></h4>
+				</div>
+				<div class="modal-body">
+					<p id="modal1"></p>
+					<a href="" target="_blank"><img src="" alt="" style="width:400" zoom=4></a>
+					<div id="test"></div>
+					<p id="modal3"></p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
