--- a/tp6/html/home.html
+++ b/tp6/html/home.html
@@ -24,7 +24,7 @@
 				<hr>
 				<h1><i class="wi wi-owm-day-{{meteo.weather[0].id}}"></i></h1>
 				<!-- <img style="text-align:center" src="http://openweathermap.org/img/w/{{meteo.weather[0].icon}}.png" /> -->
-				<h3 style="text-align:center"> ​{{meteo.main.temp - 273| number:0}} ​°</h3>
+				<h3 style="text-align:center"> ​{{meteo.main.temp| number:0}} ​°</h3>
 				<div style="text-align:center">​{{meteo.weather[0].description}}</div>
 				<hr>
 				<div class="form-group" style="text-align: center">
