--- a/tp6/index.html
+++ b/tp6/index.html
@@ -2,8 +2,8 @@
 <html ng-app="meteoApp" >
 <head>
     <title>Weather APP</title>
-    <link rel="stylesheet" href=" http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css ">
-    <script src=" http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js "></script>
+    <link rel="stylesheet" href=" https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css ">
+    <script src=" https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js "></script>
     <script src=" https://code.angularjs.org/1.4.7/angular-route.js "></script>
 	<link rel="stylesheet" href="css/weather-icons-wind.css">
 	<link rel="stylesheet" href="css/weather-icons.css">
